--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^1.0.0",
     "@tailwindcss/forms": "^0.3.2",
     "autoprefixer": "^10.2.1",
+    "html-react-parser": "^1.2.4",
     "next": "10.0.5",
     "postcss": "^8.2.4",
     "react": "17.0.1",
